# glyphspkg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
Lib/glyphspkg/: cmdline.py  filenames.py  package_to_single.py  paths.py  plist.py  single_to_package.py
stubs/openstep_plist/: __init__.pyi  __main__.pyi  _version.pyi  parser.pyi  writer.pyi
tests/: package_to_single_test.py
tests/data/: JetBrainsMono-Italic.glyphs  JetBrainsMono-Italic_orig.glyphs
tests/data/JetBrainsMono-Italic.glyphspackage/: UIState.plist  fontinfo.plist  order.plist
tests/data/JetBrainsMono-Italic.glyphspackage/glyphs/: A_-cy.glyph  A_.glyph  A_E_.glyph  A_E_acute.glyph  A_P_L_iota.glyph  A_P_L_rho.glyph  A_P_L_tildedieresis.glyph  A_acute.glyph  A_breve.glyph  A_breveacute.glyph  A_brevedotbelow.glyph  A_brevegrave.glyph  A_brevehookabove.glyph  A_brevetilde.glyph  A_caron.glyph  A_circumflex.glyph  A_circumflexacute.glyph  A_circumflexdotbelow.glyph  A_circumflexgrave.glyph  A_circumflexhookabove.glyph  A_circumflextilde.glyph  A_dieresis.glyph  A_dotbelow.glyph  A_grave.glyph  A_hookabove.glyph  A_lpha.glyph  A_lphatonos.glyph  A_macron.glyph  A_ogonek.glyph  A_ring.glyph  A_tilde.glyph  B_.glyph  B_e-cy.glyph  B_eta.glyph  C_.glyph  C_R_.glyph  C_acute.glyph  C_caron.glyph  C_cedilla.glyph  C_circumflex.glyph  (+1357 more)
