[metadata]
name = glyphspkg
description = Converter from .glyphspackage to .glyphs files and vice versa
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jenskutilek/glyphspkg
author = Jens Kutilek
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
project_urls = 
     Documentation = https://github.com/jenskutilek/glyphspkg
     Source = https://github.com/jenskutilek/glyphspkg
     Tracker = https://github.com/jenskutilek/glyphspkg/issues

[options]
zip_safe = True
package_dir=
    =Lib
packages=find:
platforms = any
include_package_data = True
install_requires =
    openstep-plist >= 0.4.0
python_requires = >=3.8
setup_requires =
    setuptools_scm

[options.packages.find]
where=Lib

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    glyphspkg = glyphspkg.cmdline:main

[flake8]
select = B, C, E, F, W, T4, B9
ignore = E203, E266, E501, W503, E741
max-line-length = 88
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
